[FILTRO] - Botón borrar filtros

--- a/src/app/check-ups/check-ups-history/check-ups-history.component.html
+++ b/src/app/check-ups/check-ups-history/check-ups-history.component.html
@@ -96,6 +96,11 @@
             </div>
           </div>
         </div>
+        <div class="flex items-end justify-center flex-1 w-full">
+          <button class="h-12 btn-primary hover:bg-green-900" type="submit" (click)="cleanFilter()">
+            Borrar Filtros
+          </button>
+        </div>
       </div>
       <!-- End filters -->
 
