--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -82,11 +82,11 @@
       </div>
 
 
-      <!-- <div class="flex items-end justify-center flex-1 w-full">
-        <button class="h-12 btn-primary hover:bg-green-900" type="submit" (click)="filterResources()">
-          Filtrar
+      <div class="flex items-end justify-center flex-1 w-full">
+        <button class="h-12 btn-primary hover:bg-green-900" type="submit" (click)="cleanFilter()">
+          Borrar Filtros
         </button>
-      </div> -->
+      </div>
 
     </div>
 
