--- a/src/app/booking/booking-list/booking-list.component.html
+++ b/src/app/booking/booking-list/booking-list.component.html
@@ -137,6 +137,11 @@
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
           </div>
         </div>
+        <div class="flex items-end justify-center flex-1 w-full">
+          <button class="h-12 btn-primary hover:bg-green-900" type="submit" (click)="cleanFilter()">
+            Borrar Filtros
+          </button>
+        </div>
       </div>
       <!-- End filters -->
 
