--- a/src/app/repair/repair-pending/repair-pending.component.html
+++ b/src/app/repair/repair-pending/repair-pending.component.html
@@ -76,7 +76,7 @@
               name="days"
               [(ngModel)]="days"
               id="days"
-              (ngModelChange)="selectClient()"
+              (ngModelChange)="daysFilter()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             >
               <option [value]="0">A tiempo</option>
@@ -98,6 +98,11 @@
               />
             </div>
           </div>
+        </div>
+        <div class="flex items-end justify-center flex-1 w-full">
+          <button class="h-12 btn-primary hover:bg-green-900" type="submit" (click)="cleanFilter()">
+            Borrar Filtros
+          </button>
         </div>
       </div>
       <!-- End filters -->
@@ -121,7 +126,7 @@
         </thead>
         <tbody>
           <ng-container
-            *ngFor="let resource of resources$ | async; let i = index"
+            *ngFor="let resource of repairs; let i = index"
           >
             <tr [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
               <td class="p-2">
@@ -182,7 +187,7 @@
               <!-- Estado -->
               <td class="p-2">
                 {{
-                  resource.status ? resourceStatusNames[resource.status] : ''
+                  resource.status
                 }}
               </td>
               <!-- Acciones -->
