[USER] - Se quito el scroll-y para el listado de usuarios

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <!-- Main Container -->
-<div class="h-full overflow-y-scroll">
+<div class="h-full">
   <div
     class="flex-col justify-between w-full sm:pt-12 sm:pl-4"
     id="main-content"
@@ -193,7 +193,7 @@
           <!-- End filters -->
 
           <table
-            class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll"
+            class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg"
           >
             <thead>
               <tr>
