--- a/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
+++ b/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
@@ -1,4 +1,4 @@
-<div class="h-full overflow-y-scroll">
+<div class="h-full">
 <!-- Main Container -->
 <div class="flex-col justify-between w-full sm:pt-12 sm:pl-4" id="main-content">
   <!-- HEADER -->
@@ -117,7 +117,7 @@
         <!-- End filters -->
 
         <table
-          class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll"
+          class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg"
         >
           <thead>
             <tr>
