[USER ROLES] - Se valido que puede y no puede ver el cliente

--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -56,7 +56,7 @@
             <div class="flex items-center justify-center space-x-2 ">
               <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
                 [routerLink]="['/clientes', client.id, 'sedes']">{{client.offices?.length}}</span>
-              <svg [routerLink]="['/clientes', client.id, 'crear-sede']" xmlns="http://www.w3.org/2000/svg"
+              <svg *ngIf="showAddBtn" [routerLink]="['/clientes', client.id, 'crear-sede']" xmlns="http://www.w3.org/2000/svg"
                 class="w-6 h-6 outline-none cursor-pointer focus:outline-none text-brand hover:text-green-900"
                 fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
