--- a/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
+++ b/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
@@ -81,10 +81,10 @@
               (ngModelChange)="selectClient()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             >
-              <option [value]="'0'">A tiempo</option>
-              <option [value]="'3'">entre 1 y 3 días</option>
-              <option [value]="'5'">Entre 4 y 5 días</option>
-              <option [value]="'6'">Más de 6 días</option>
+              <option [value]="0">A tiempo</option>
+              <option [value]="3">menos de 3 días</option>
+              <option [value]="5">menos de 5 días</option>
+              <option [value]="6">Más de 6 días</option>
             </select>
           </div>
           <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
@@ -125,7 +125,9 @@
           <ng-container
             *ngFor="let resource of resources$ | async; let i = index"
           >
-            <tr [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
+            <tr *ngIf="validateRangeDays(calcDays(
+              resource.checkups[resource.checkups.length - 1].createdAt
+            ))" [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
               <td class="p-2">
                 {{
                   resource.checkups[resource.checkups.length - 1].createdAt
