[DELETE] quitar la opción de eliminar en sedes

--- a/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
+++ b/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
@@ -80,7 +80,7 @@
               name="days"
               [(ngModel)]="days"
               id="days"
-              (ngModelChange)="selectClient()"
+              (ngModelChange)="filterResources()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             >
               <option [value]="0">A tiempo</option>
