--- a/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
+++ b/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
@@ -133,7 +133,9 @@
           <ng-container
             *ngFor="let resource of resources$ | async; let i = index"
           >
-            <tr [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
+            <tr *ngIf="validateRangeDays(calcDays(
+              resource.checkups[resource.checkups.length - 1].createdAt
+            ))" [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
               <td class="p-2">
                 <span *ngIf="resource.checkups.length">
                   {{
