--- a/src/app/approvals/approvals-pending/approvals-pending.component.html
+++ b/src/app/approvals/approvals-pending/approvals-pending.component.html
@@ -79,7 +79,7 @@
               name="days"
               [(ngModel)]="days"
               id="days"
-              (ngModelChange)="selectClient()"
+              (ngModelChange)="filterResources()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             >
               <option [value]="0">A tiempo</option>
@@ -131,7 +131,9 @@
           <ng-container
             *ngFor="let resource of resources$ | async; let i = index"
           >
-            <tr [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
+            <tr *ngIf="validateRangeDays(calcDays(
+              resource.checkups[resource.checkups.length - 1].createdAt
+            ))" [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
               <td class="p-2">
                 <span *ngIf="resource.checkups.length">
                   {{
