--- a/src/app/inventory/inventory-form/inventory-form.component.html
+++ b/src/app/inventory/inventory-form/inventory-form.component.html
@@ -39,10 +39,13 @@
             }"
           >
             <ng-container *ngFor="let resource of resources$ | async">
-              <option [ngValue]="resource">
+              <option [ngValue]="resource.type">
                 {{ resource.type }}
               </option>
             </ng-container>
+            <option value="Número cliente">
+              Número cliente
+            </option>
           </select>
         </div>
         <!-- Reference -->
