--- a/src/app/approvals/approvals-history/approvals-history.component.html
+++ b/src/app/approvals/approvals-history/approvals-history.component.html
@@ -85,9 +85,7 @@
               <option [value]="6">Más de 6 días</option>
             </select>
           </div>
-          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
-            <!-- Reference -->
-            <div>
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
               <label class="text-gray-400" for="reference">Referencia:</label>
               <input
                 name="reference"
@@ -96,7 +94,6 @@
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
                 type="text"
               />
-            </div>
           </div>
         </div>
         <div class="flex items-end justify-center flex-1 w-full">
