--- a/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
+++ b/src/app/approvals/approvals-pending-repair/approvals-pending-repair.component.html
@@ -90,9 +90,8 @@
               <option [value]="6">Más de 6 días</option>
             </select>
           </div>
-          <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
+          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <!-- Reference -->
-            <div>
               <label class="text-gray-400" for="reference">Referencia:</label>
               <input
                 name="reference"
@@ -101,7 +100,6 @@
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
                 type="text"
               />
-            </div>
           </div>
         </div>
         <div class="flex items-end justify-center flex-1 w-full">
