[user] - created at

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -273,7 +273,7 @@
                   <td class="p-2">{{ user.firstName }}</td>
                   <td class="p-2">{{ user.lastName }}</td>
                   <td class="p-2">{{ user.documentNumber }}</td>
-                  <td class="p-2"></td>
+                  <td class="p-2">{{ user.createdAt |date }}</td>
                   <td class="p-2">{{ user.email }}</td>
                   <td class="p-2">{{ user.client }}</td>
                   <td class="p-2">{{ user.office }}</td>
