--- a/src/app/maintenance/maintenance-history/maintenance-history.component.html
+++ b/src/app/maintenance/maintenance-history/maintenance-history.component.html
@@ -146,7 +146,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{checkOut.assignedUser?.firstName}} {{checkOut.assignedUser?.lastName}}</td>
               <td class="p-2"> {{checkOut.resource?.reference}} </td>
               <!-- Estado -->
               <td class="p-2">
