--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -17,7 +17,7 @@
   <h1 class="font-bold text:2xl sm:text-5xl">{{ title }}</h1>
 </div>
 <div class="h-full overflow-y-scroll">
-  <app-back-arrow [backRoute]="'/clientes/'"></app-back-arrow>
+  <app-back-arrow [routerLink]="['/clientes', clients.id, 'usuarios']"></app-back-arrow>
   <!-- End Title -->
   <div class="flex flex-col items-center justify-center w-full space-y-4 pb-12">
     <!-- Form Container -->
