--- a/src/app/booking/booking-list/booking-list.component.html
+++ b/src/app/booking/booking-list/booking-list.component.html
@@ -171,9 +171,9 @@
         >
         <tr [ngClass]="{ 'bg-gray-200': i % 2 === 0 }" class="text-center">
           <td class="p-2">{{ reservation.createdAt | date }}</td>
-          <td class="p-2"> {{reservation.client}} </td>
-          <td class="p-2"> </td>
-          <td class="p-2"> </td>
+          <td class="p-2"> {{reservation.user.client }} </td>
+          <td class="p-2"> {{reservation.user.office }}</td>
+          <td class="p-2"> {{reservation.travels[0]?.origin }}</td>
           <td class="p-2"> {{reservation.resourceRef}} </td>
           <td class="p-2"> {{ calcDays(reservation.createdAt) }} </td>
           <td class="justify-center p2">
